--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: test-branch
+        path: test
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
@@ -27,7 +30,7 @@ jobs:
         JIRA_USERNAME : ${{ secrets.JIRA_USERNAME }}
       run: |
         pip install gitpython
-        python helloworld.py "$JIRA_USERNAME"
+        python test/helloworld.py "$JIRA_USERNAME"
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
