--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         python-version: 3.8
     - name: Run test script
       env:
-        JIRA_USERNAME : ${{ secrets.JIRA_USERNAME }}
+        JIRA_USERNAME : ${{ secrets.APP_TEAM_ID }}
       run: |
         pip install gitpython
         python helloworld.py "$JIRA_USERNAME"
